--- a/index.css
+++ b/index.css
@@ -18,15 +18,15 @@ h1{
 }
 
 ul {
-	text-align: lleft;
+	text-align: left;
 	padding-left: 10%;
 	padding: 7%;
 	font-size: 2rem;
 	list-style: circle;
 }
 
-li:hover{
-	color:red;
+ul li:hover{
+	color: red;
 	margin: 4%;
 	transition: 1.5s ease;
 	cursor: pointer;
